# videogame-console

./: README.md
console/: ARCHITECTURE.md  PLAN.md  pyproject.toml
console/docs/: sourcing.md
console/routing/: DRC.rpt  fp-lib-table  poses.json  rp2350-console-routed-prestitch.kicad_pcb  rp2350-console-unrouted.kicad_pcb  rp2350_console_jitx.designs.console.ConsoleBoard-2.kicad_sch
console/routing/production/: bom.csv  designators.csv  lcsc-manual.csv  netlist.ipc
console/routing/rp2350_console_jitx.designs.console.ConsoleBoard.pretty/: AOTAB201610S3R3_COMPOSITE_LANDPATTERN.kicad_mod  DBLANDPATTERN.kicad_mod  DBLANDPATTERN_1.kicad_mod  DBLANDPATTERN_11.kicad_mod  DBLANDPATTERN_14.kicad_mod  DBLANDPATTERN_16.kicad_mod  DBLANDPATTERN_22.kicad_mod  DBLANDPATTERN_23.kicad_mod  DBLANDPATTERN_30.kicad_mod  DBLANDPATTERN_31.kicad_mod  DBLANDPATTERN_34.kicad_mod  DBLANDPATTERN_35.kicad_mod  DBLANDPATTERN_40.kicad_mod  DBLANDPATTERN_41.kicad_mod  DBLANDPATTERN_46.kicad_mod  DBLANDPATTERN_5.kicad_mod  DBLANDPATTERN_50.kicad_mod  DBLANDPATTERN_52.kicad_mod  DBLANDPATTERN_56.kicad_mod  DBLANDPATTERN_57.kicad_mod  DBLANDPATTERN_9.kicad_mod  RP2350B_COMPOSITE_LANDPATTERN.kicad_mod  SRV05_4A_COMPOSITE_LANDPATTERN.kicad_mod  SRV05_4A_COMPOSITE_LANDPATTERN_3.kicad_mod  TLV62569_COMPOSITE_LANDPATTERN.kicad_mod  W25Q128JV_COMPOSITE_LANDPATTERN.kicad_mod
console/rp2350_console_jitx/: test_hdmi_a.py  test_jst_ph_2.py  test_tpd8s009.py
console/rp2350_console_jitx/components/: hdmi_a.py  (+4 more)
console/scripts/: grep_gates.sh
console/tools/: fix_drc.py  gnd_vias.py  route_pipeline.sh
(+185 files in other folders)
