# pyproject.toml

[build-system]
requires = [
  "hatchling>=1.27.0,<2.0",
  "hatch-vcs>=0.4.0,<0.5.0"
]
build-backend = "hatchling.build"

[project]
name = "rp2350_console_jitx"
version = "0.1"
dependencies = [
  "jitx>=4.2.0,<5",
  "jitxlib-parts>=1.1.0,<2",
  "jitxlib-standard>=4.2.0,<5",
  "jitxlib-jlcpcb>=1.0.0,<2",
  "jitxexamples-components>=1.0.0,<2"
]
requires-python = ">=3.12"
